# transcriber

./: Dockerfile  README.md  build-upload.sh  pyproject.toml  run.sh
.github/workflows/: push-to-ecr.yaml
src/transcriber/: main.py  utils.py
