[tool.poetry]
name = "transcriber"
version = "1.0.0"
description = "Transcribing service"
authors = ["Samarth Jain"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.100.0"
uvicorn = "^0.22.0"

[tool.poetry.scripts]
start = "uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
