[tool.poetry]
name = "transcriber"
version = "1.0.0"
description = "Transcribing service"
authors = ["Samarth Jain"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.100.0"
uvicorn = "^0.22.0"
boto3 = "^1.35.11"
whisper = "^1.1.10"
ffmpeg = "^1.4"
loguru = "^0.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
